--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.0",
     "leva": "^0.9.35",
     "peaks.js": "^3.2.1",
     "react": "^18.2.0",
